tests/ui/closures/return-in-closure-with-fn-bound.stderr
error[E0308]: mismatched types
  --> $DIR/return-in-closure-with-fn-bound.rs:4:20
   |
LL |     func(|| return 2)
   |                    ^ expected `()`, found integer
   |
note: return type inferred to be `()` here
  --> $DIR/return-in-closure-with-fn-bound.rs:4:20
   |
LL |     func(|| return 2)
   |                    ^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
